Comment for possible future colors and fonts

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -2,3 +2,40 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* // Potential Color Scheme? */
+/* @layer base {
+  :root {
+    --text: 44 37% 8%;
+    --background: 42 32% 77%;
+    --primary: 45 45% 27%;
+    --secondary: 42 50% 66%;
+    --accent: 42 54% 44%;
+  }
+  .dark {
+    --text: 44 37% 92%;
+    --background: 42 32% 23%;
+    --primary: 45 45% 73%;
+    --secondary: 42 50% 34%;
+    --accent: 42 54% 56%;
+  }
+} */
+
+/* Potential Fonts? */
+/* fontSize: {
+  sm: '0.707rem',
+  base: '1rem',
+  xl: '1.414rem',
+  '2xl': '1.999rem',
+  '3xl': '2.827rem',
+  '4xl': '3.997rem',
+  '5xl': '5.652rem',
+},
+fontFamily: {
+  heading: 'Open Sans',
+  body: 'Roboto Serif',
+},
+fontWeight: {
+  normal: '400',
+  bold: '700',
+}, */
